--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
                 <button class="full-copy-btn" onclick="copyFullPreview(this)">✨超強力雙雙製</button>
                 <span class="inline-msg">✅超強力雙雙製大成功！</span>
             </div>
-            <button class="clear-btn" onclick="clearInput()"🧹空空遺忘</button>
+            <button class="clear-btn" onclick="clearInput()">🧹空空遺忘</button>
         </div>
     </div>
 
