--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
             display: flex; 
             justify-content: flex-end; 
             align-items: center; 
-            gap: 10px; 
+            gap: 12px; 
         }
     
         #pasteBtn { background: #e8f8f5; color: var(--primary); border: 1.5px solid var(--primary); padding: 8px 15px; border-radius: 10px; font-weight: 600; font-size: 13px; cursor: pointer; white-space: nowrap; }
@@ -45,7 +45,7 @@
         /* 2. 主要按鈕：非對稱並排 (左寬右窄) */
         .btn-grid { 
             display: grid; 
-            grid-template-columns: 1.8fr 1fr; /* 給予雙雙製更多空間 */
+            grid-template-columns: 1.8fr 1fr; /* 給予超強力雙雙製更多空間 */
             gap: 8px; 
             margin-top: 15px; 
             align-items: center; 
@@ -95,7 +95,7 @@
     <div id="outputArea"></div>
 
     <div class="stash-header" style="display:flex; justify-content:space-between; align-items:center; width:100%; margin:20px 0 10px;">
-        <h3 style="margin:0; color:var(--text-sec); font-size: 1rem;">📚️霍格華茲圖書館</h3>
+        <h3 style="margin:0; color:var(--text-sec); font-size: 1.2rem;">📚️霍格華茲圖書館</h3>
         <div style="display:flex; align-items:center; gap:12px;">
             <span id="msg-stash-all" class="inline-msg">✅</span>
             <button onclick="copyAllStash(this)" style="background:var(--primary); color:white; padding:8px 12px; border-radius:10px; cursor:pointer; border:none; font-weight:600;">✨超強力雙雙製</button>
