--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
             flex-wrap: wrap; 
             justify-content: space-between; 
             align-items: flex-end; 
-            margin-bottom: 12px; 
+            margin-bottom: 16px; 
         }
         h2, h3 { 
             flex: 1 0 100%; /* 強制標題佔滿上方一行 */
@@ -52,7 +52,7 @@
         }
         button { padding: 12px 8px; border: none; border-radius: 10px; font-weight: 600; cursor: pointer; transition: 0.2s; font-size: 13px; }
         .full-copy-btn { background: var(--primary); color: white; }
-        .clear-btn { background: #f1f3f4; color: var(--text-sec); }
+        .clear-btn { background: #f1f3f4; color: var(--danger); }
     
         /* 功能樣式 */
         .item-wrapper { background: white; border-radius: 15px; padding: 15px; margin-bottom: 15px; border: 1px solid #f1f1f1; }
@@ -82,7 +82,7 @@
                 <button id="pasteBtn" onclick="pasteFromClipboard()">💡疾疾 護法現身</button>
             </div>
         </div>
-        <textarea id="input" placeholder="content速速前🌟"></textarea>
+        <textarea id="input" placeholder="Content速速前🌟"></textarea>
         <div class="btn-grid">
             <div style="display:flex; align-items:center; gap:8px;">
                 <button class="full-copy-btn" onclick="copyFullPreview(this)">✨超強力雙雙製</button>
@@ -95,7 +95,7 @@
     <div id="outputArea"></div>
 
     <div class="stash-header" style="display:flex; justify-content:space-between; align-items:center; width:100%; margin:20px 0 10px;">
-        <h3 style="margin:0; color:var(--primary); font-size: 1.15rem;">📚️霍格華茲圖書館</h3>
+        <h3 style="margin:0; color:var(--primary); font-size: 1.15rem;">🔮儲思盆</h3>
         <div style="display:flex; align-items:center; gap:15px;">
             <span id="msg-stash-all" class="inline-msg">✅</span>
             <button onclick="copyAllStash(this)" style="background:var(--primary); color:white; padding:8px 12px; border-radius:10px; cursor:pointer; border:none; font-weight:600;">✨超強力雙雙製</button>
