--- a/test.html
+++ b/test.html
@@ -24,7 +24,7 @@
         h2, h3 { 
             flex: none; /* 強制標題佔滿上方一行 */
             font-size: 1.2rem; 
-            /*margin: 0 0 10px 0; */
+            margin: 0; 
             color: var(--primary); 
             display: flex; 
             align-items: center; 
