--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
         }
         /* 讓裝載「貼上按鈕」或「儲思盆控制鈕」強制靠右 */
         .header-row > div, .stash-header > div { 
-            width: 100%; 
+            width: auto; 
             display: flex; 
             justify-content: flex-end; 
             align-items: center; 
