--- a/test.html
+++ b/test.html
@@ -22,7 +22,8 @@
             margin-bottom: 16px; 
         }
         h2, h3 { 
-            flex: 0 1 auto; /* 強制標題佔滿上方一行 */
+            flex: 0 0 auto;
+            white-space: nowarp;
             font-size: 1.2rem; 
             margin: 0; 
             color: var(--primary); 
