--- a/test.html
+++ b/test.html
@@ -17,13 +17,14 @@
         .header-row, .stash-header { 
             display: flex; 
             flex-wrap: nowrap; 
-            justify-content: center; 
-            align-items: flex-end; 
+            justify-content: space-between; 
+            align-items: center; 
             margin-bottom: 16px; 
+            width: 100%;
         }
         h2, h3 { 
             flex: 0 0 auto;
-            white-space: nowarp;
+            white-space: nowrap;
             font-size: 1.2rem; 
             margin: 0; 
             color: var(--primary); 
