--- a/test.html
+++ b/test.html
@@ -98,7 +98,7 @@
 
     <div id="outputArea"></div>
 
-    <div class="stash-header" style="display:flex; justify-content:space-between; align-items:center; width:100%; margin:20px 0 10px;">
+    <div class="stash-header">  
         <h3 style="margin:0; color:var(--primary); font-size: 1.15rem;">🔮儲思盆</h3>
         <div style="display:flex; align-items:center; gap:15px;">
             <span id="msg-stash-all" class="inline-msg">✅</span>
