--- a/test.html
+++ b/test.html
@@ -17,13 +17,13 @@
         .header-row, .stash-header { 
             display: flex; 
             flex-wrap: nowrap; 
-            justify-content: space-between; 
+            justify-content: flex-start; 
             align-items: center; 
             margin-bottom: 16px; 
             width: 100%;
         }
         h2, h3 { 
-            flex: 0 1 auto;
+            flex: 1;
             white-space: nowrap;
             font-size: 1.2rem; 
             margin: 0; 
