--- a/test.html
+++ b/test.html
@@ -82,7 +82,7 @@
     <div class="card">
         <div class="header-row">
             <h2>⚡️疾疾 表格現身</h2>
-            <div style="display:flex; align-items:center; gap:10px;">
+            <div>
                 <span id="msg-top" class="inline-msg">🐾召喚成功</span>
                 <button id="pasteBtn" onclick="pasteFromClipboard()">💡Content速速前</button>
             </div>
