--- a/test.html
+++ b/test.html
@@ -16,18 +16,15 @@
         /* 1. 標題區塊：上下結構 + 左右極端對稱 */
         .header-row, .stash-header { 
             display: flex; 
-            flex-wrap: nowrap; 
+            flex-wrap: wrap; 
             justify-content: space-between; 
-            align-items: center; 
+            align-items: flex-end; 
             margin-bottom: 16px; 
-            width: 100%;
-            box-sizing: border-box;
         }
         h2, h3 { 
-            flex: 0 0 auto;
-            white-space: nowrap;
+            flex: 1 0 100%; /* 強制標題佔滿上方一行 */
             font-size: 1.2rem; 
-            margin: 0; 
+            margin: 0 0 10px 0; 
             color: var(--primary); 
             display: flex; 
             align-items: center; 
@@ -35,13 +32,11 @@
         }
         /* 讓裝載「貼上按鈕」或「儲思盆控制鈕」強制靠右 */
         .header-row > div, .stash-header > div { 
-            width: auto; 
-            flex: 0 0 auto;
+            width: 100%; 
             display: flex; 
             justify-content: flex-end; 
             align-items: center; 
             gap: 12px; 
-            flex-shrink: 0;
         }
     
         #pasteBtn { background: #e8f8f5; color: var(--primary); border: 1.5px solid var(--primary); padding: 8px 15px; border-radius: 10px; font-weight: 600; font-size: 13px; cursor: pointer; white-space: nowrap; }
@@ -82,7 +77,7 @@
     <div class="card">
         <div class="header-row">
             <h2>⚡️疾疾 表格現身</h2>
-            <div>
+            <div style>
                 <span id="msg-top" class="inline-msg">🐾召喚成功</span>
                 <button id="pasteBtn" onclick="pasteFromClipboard()">💡Content速速前</button>
             </div>
@@ -99,7 +94,7 @@
 
     <div id="outputArea"></div>
 
-    <div class="stash-header">  
+    <div class="stash-header">
         <h3 style="margin:0; color:var(--primary); font-size: 1.15rem;">🔮儲思盆</h3>
         <div style="display:flex; align-items:center; gap:15px;">
             <span id="msg-stash-all" class="inline-msg">✅</span>
