--- a/test.html
+++ b/test.html
@@ -16,13 +16,12 @@
         /* 1. 標題區塊：上下結構 + 左右極端對稱 */
         .header-row, .stash-header { 
             display: flex; 
-            flex-wrap: wrap; 
+            flex-wrap: nowrap; 
             justify-content: space-between; 
             align-items: flex-end; 
             margin-bottom: 16px; 
         }
         h2, h3 { 
-            flex: 1 0 100%; /* 強制標題佔滿上方一行 */
             font-size: 1.2rem; 
             margin: 0 0 10px 0; 
             color: var(--primary); 
