--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
         }
         h2, h3 { 
             font-size: 1.2rem; 
-            margin: 0 0 10px 0; 
+            margin: 0; 
             color: var(--primary); 
             display: flex; 
             align-items: center; 
