--- a/test.html
+++ b/test.html
@@ -22,6 +22,8 @@
             margin-bottom: 16px; 
         }
         h2, h3 { 
+            flex: 0 0 auto;
+            white-space: nowrap;
             font-size: 1.2rem; 
             margin: 0; 
             color: var(--primary); 
