--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
             display: flex; 
             flex-wrap: nowrap; 
             justify-content: space-between; 
-            align-items: flex-end; 
+            align-items: center; 
             margin-bottom: 16px; 
         }
         h2, h3 { 
