--- a/test.html
+++ b/test.html
@@ -11,15 +11,15 @@
         /* 基礎排版 */
         body { font-family: -apple-system, system-ui, sans-serif; background: var(--bg); color: var(--text); padding: 15px; margin: 0; display: flex; flex-direction: column; align-items: center; }
         .container { width: 100%; max-width: 650px; }
-        .card { background: var(--card-bg); padding: 20px; border-radius: 18px; box-shadow: 0 5px 25px rgba(0,0,0,0.05); margin-bottom: 20px; border: 1px solid rgba(0,0,0,0.02); }
+        .card { background: var(--card-bg); padding: 20px; border-radius: 18px; box-shadow: 0 5px 25px rgba(0,0,0,0.05); margin-bottom: 16px; border: 1px solid rgba(0,0,0,0.02); }
         
-        /* 1. 標題區塊：上下結構 + 左右極端對稱 */
+        /* 1. 標題區塊：左右對稱 */
         .header-row, .stash-header { 
             display: flex; 
             flex-wrap: nowrap; 
             justify-content: space-between; 
             align-items: center; 
-            margin-bottom: 8px; 
+            margin-bottom: 6px; 
         }
         h2, h3 { 
             flex: 0 0 auto;
