--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
             flex-wrap: nowrap; 
             justify-content: space-between; 
             align-items: center; 
-            margin-bottom: 6px; 
+            margin-bottom: 8px; 
         }
         h2, h3 { 
             flex: 0 0 auto;
@@ -79,7 +79,7 @@
         <div class="header-row">
             <h2>⚡️疾疾 表格現身</h2>
             <div style>
-                <span id="msg-top" class="inline-msg">🐾召喚成功</span>
+                <span id="msg-top" class="inline-msg">🐾</span>
                 <button id="pasteBtn" onclick="pasteFromClipboard()">💡Content速速前</button>
             </div>
         </div>
@@ -164,7 +164,7 @@
     function renderItem(data, cont, type) {
         const wrapper = document.createElement('div');
         wrapper.className = "item-wrapper";
-        wrapper.innerHTML = `<div class="item-action-bar"><span class="inline-msg">惡作劇完成✅</span><button class="mini-btn" style="background:#f0f0f0;" onclick="copyDirect(this)">📋雙雙製</button><button class="mini-btn" style="background:#e8f8f5; color:var(--primary); border:1.5px solid var(--primary);" onclick="stashThis(this)">📩溫咖癲啦唯啊薩</button></div><div class="pure-content"></div>`;
+        wrapper.innerHTML = `<div class="item-action-bar"><span class="inline-msg">惡作劇完成🐾</span><button class="mini-btn" style="background:#f0f0f0;" onclick="copyDirect(this)">📋雙雙製</button><button class="mini-btn" style="background:#e8f8f5; color:var(--primary); border:1.5px solid var(--primary);" onclick="stashThis(this)">📩溫咖癲啦唯啊薩</button></div><div class="pure-content"></div>`;
         const contentDiv = wrapper.querySelector('.pure-content');
         if (type === 'table') {
             const t = document.createElement('table');
@@ -197,7 +197,7 @@
                 <input type="text" class="stash-title-input" value="${item.title}" onchange="updateStash(${i})">
                 <div class="stash-content-editable" contenteditable="true" oninput="updateStash(${i})">${sanitize(item.html)}</div>
                 <div class="stash-footer">
-                    <span class="inline-msg">惡作劇完成✅</span>
+                    <span class="inline-msg">惡作劇完成🐾</span>
                     <button class="mini-btn" style="background:#eee;" onclick="copyStashDirect(${i}, this)">📋雙雙製</button>
                     <button class="mini-btn" style="background:var(--primary); color:white;" onclick="saveManual(${i}, this)">💾O.W.L.s交卷</button>
                 </div>
