--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
             flex-wrap: nowrap; 
             justify-content: space-between; 
             align-items: center; 
-            margin-bottom: 8px; 
+            margin-bottom: 12px; 
         }
         h2, h3 { 
             flex: 0 0 auto;
@@ -87,7 +87,7 @@
         <div class="btn-grid">
             <div style="display:flex; align-items:center; gap:8px;">
                 <button class="full-copy-btn" onclick="copyFullPreview(this)">✨超強力雙雙製</button>
-                <span class="inline-msg">✅</span>
+                <span class="inline-msg">🐾</span>
             </div>
             <button class="clear-btn" onclick="clearInput()">🧹去去雜亂走</button>
         </div>
@@ -98,7 +98,7 @@
     <div class="stash-header">
         <h3 style="margin:0; color:var(--primary); font-size: 1.15rem;">🔮儲思盆</h3>
         <div style="display:flex; align-items:center; gap:15px;">
-            <span id="msg-stash-all" class="inline-msg">✅</span>
+            <span id="msg-stash-all" class="inline-msg">🐾</span>
             <button onclick="copyAllStash(this)" style="background:var(--primary); color:white; padding:8px 12px; border-radius:10px; cursor:pointer; border:none; font-weight:600;">✨超強力雙雙製</button>
             <button onclick="clearAllStash()" style="background:#fff; color:var(--danger); border:1px solid #fee; padding:8px 12px; border-radius:10px; cursor:pointer;">🧹空空遺忘</button>
         </div>
