--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             const text = await navigator.clipboard.readText();
             document.getElementById('input').value = text;
             processAll(); triggerMsg(document.getElementById('msg-top'));
-        } catch (err) { alert("這不是麻瓜該來的世界　去去麻瓜走(σ･∀･)σ☆"); }
+        } catch (err) { alert("🦉貓頭鷹郵局在此為您服務"); }
     }
 
     function clearInput() { document.getElementById('input').value = ""; document.getElementById('outputArea').innerHTML = ""; }
